# ddns-update-monkey

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml  sonar-project.properties
.claude/commands/: review.md
.github/workflows/: gitguardian.yml  sonarcloud.yml
deploy/cron/: README.md  ddns-update-monkey
deploy/logrotate.d/: README.md  ddns-update-monkey
etc/cron.d/: README.md  ddnsupdatemonkey  duckdnsupdater
src/monkey/: __main__.py  _http.py  config.py  dns_updater.py  duck_dns_client.py  duck_dns_updater.py  ip_resolver.py  state_store.py  updater.py
tests/: conftest.py  test_config.py  test_duck_dns_client.py  test_ip_resolver.py  test_main.py  test_state_store.py  test_updater.py
