[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddns-update-monkey"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "requests~=2.32",
    "python-dotenv~=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/monkey --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage.run]
relative_files = true

[tool.hatch.build.targets.wheel]
packages = ["src/monkey"]
