[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddns-update-monkey"
version = "0.1.0"
description = "Lightweight DDNS updater that keeps your DuckDNS hostname pointed at your current home IP address."
requires-python = ">=3.13"
dependencies = [
    "requests~=2.33",
    "python-dotenv~=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "pre-commit~=4.5",
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/monkey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/monkey --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage.run]
relative_files = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-length enforced by formatter, not linter
]
